# mllib

./: .gitignore  CMakeLists.txt  README.md  Readme.md  mymllib.sln
UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  catch.hpp  main.cpp
demo/: CMakeLists.txt  main.cpp
mymllib/: CMakeLists.txt  c4.5.cpp  c4.5.h  classifier.h  data.cpp  data.h  in.txt  main.cpp  memory_pool.h  multi_classification2.txt  multiclass_theta.txt  mymllib.vcxproj  mymllib.vcxproj.filters  optimizer.h  range.h  softmax_regreesion.cpp  softmax_regression.cpp  softmax_regression.h  tree.cpp  tree.h  tree.hh
src/: CMakeLists.txt  main.cpp
src/classifier/: CMakeLists1.txt  c4.5.cpp  c4.5.h  classifier.h  perceptron.cpp  perceptron.h  softmax_regression.cpp  softmax_regression.h  svm.cpp  svm.h
src/data/: matrix.h  matrix_cuda.h
src/optimizer/: optimizer.h
src/tool/: memory_pool.h  range.h
test/: CMakeLists.txt  main.cpp  test.vcxproj  test.vcxproj.filters
test_data/: hessian_test.txt  matrix_test.txt  multi_classification.txt  perceptron_test.txt
