project  (mllib)

add_subdirs_have_cmakelists(${CMAKE_CURRENT_SOURCE_DIR})
include_all_hearers()
FILE(GLOB_RECURSE HEADER "*.h" "*.hpp" "*.hh")
FILE(GLOB_RECURSE SOURCE "*.c" "*.cpp" "*.cc")
generate_filters_by_dir(HEADER SOURCE)

IF(CUDA_FOUND)
	#cuda_add_executable(Demo ${SOURCE} ${HEADER})
	cuda_add_library(mllib ${SOURCE} ${HEADER})
	CUDA_ADD_CUBLAS_TO_TARGET(mllib)
ELSE(CUDA_FOUND)
	#add_executable(Demo ${SOURCE} ${HEADER})
	ADD_LIBRARY(mllib ${SOURCE} ${HEADER})
ENDIF(CUDA_FOUND)
#message(STATUS ${LIBRARY_OUTPUT_PATH})